<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:paddingBottom="10dp"
        android:clipToPadding="false">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:background="@drawable/background_primary_variant_round"
            android:elevation="3dp"
            android:textColorHint="#000000"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/search_bar_query"
            app:searchHintIcon="@drawable/ic_baseline_search_24"
            app:searchIcon="@drawable/ic_baseline_search_24" />

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_view"
            android:text="@string/top_picks_title"
            android:textAppearance="?attr/textAppearanceHeadline5"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/top_picks_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:elevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/road_card_view"
            style="@style/CategoryCardViewStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_picks_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/road_constraint_layout"
                style="@style/CategoryConstraintLayoutStyle">

                <ImageView
                    android:id="@+id/road_image_view"
                    style="@style/CategoryImageViewStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/road_text_view"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_weight="1"
                    android:contentDescription="@string/road_image_description"
                    android:src="@drawable/ic_road"/>

                <TextView
                    android:id="@+id/road_text_view"
                    style="@style/CategoryTextViewStyle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/road_image_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="3"
                    android:text="@string/road_image_description"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/mountain_card_view"
            style="@style/CategoryCardViewStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/road_card_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mountain_constraint_layout"
                style="@style/CategoryConstraintLayoutStyle">

                <ImageView
                    android:id="@+id/mountain_image_view"
                    style="@style/CategoryImageViewStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/mountain_text_view"
                    app:layout_constraintHorizontal_weight="1"
                    android:contentDescription="@string/mountain_image_description"
                    android:src="@drawable/ic_mountain"/>

                <TextView
                    android:id="@+id/mountain_text_view"
                    style="@style/CategoryTextViewStyle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/mountain_image_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="3"
                    android:text="@string/mountain_image_description"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/adventure_card_view"
            style="@style/CategoryCardViewStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mountain_card_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/adventure_constraint_layout"
                style="@style/CategoryConstraintLayoutStyle">

                <ImageView
                    android:id="@+id/adventure_image_view"
                    style="@style/CategoryImageViewStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/adventure_text_view"
                    app:layout_constraintHorizontal_weight="1"
                    android:contentDescription="@string/adventure_image_description"
                    android:src="@drawable/ic_globe_europe"/>

                <TextView
                    android:id="@+id/adventure_text_view"
                    style="@style/CategoryTextViewStyle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/adventure_image_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="3"
                    android:text="@string/adventure_image_description"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/kids_card_view"
            style="@style/CategoryCardViewStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adventure_card_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/kids_constraint_layout"
                style="@style/CategoryConstraintLayoutStyle">

                <ImageView
                    android:id="@+id/kids_image_view"
                    style="@style/CategoryImageViewStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/kids_text_view"
                    app:layout_constraintHorizontal_weight="1"
                    android:contentDescription="@string/kids_image_description"
                    android:src="@drawable/ic_baby"/>

                <TextView
                    android:id="@+id/kids_text_view"
                    style="@style/CategoryTextViewStyle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/kids_image_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="3"
                    android:text="@string/kids_image_description"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
